<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutDetallesEvento"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Eventos.DetallesEventoFragment">

    <TextView
        android:id="@+id/textViewTemperatura"
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/DetallesDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:isScrollContainer="true"
                    android:scrollbars="vertical"
                    android:text="@string/descripci_n_del_evento"
                    android:textSize="20sp"
...
            app:layout_constraintBottom_toBottomOf="@+id/EtiquetaFechaInicio"
            app:layout_constraintStart_toEndOf="@+id/EtiquetaFechaInicio"
            app:layout_constraintTop_toTopOf="@+id/EtiquetaFechaInicio"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/DetallesLocalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/textoVacio"
            android:background="@color/Azul"
            android:textSize="20sp"
...
            app:layout_constraintBottom_toBottomOf="@+id/EtiquetaLocalidad"
            app:layout_constraintStart_toEndOf="@+id/EtiquetaLocalidad"
            app:layout_constraintTop_toTopOf="@+id/EtiquetaLocalidad"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/EtiquetaDetalles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/textoVacio"
            android:textColor="@color/white_50"
            android:textSize="20sp"
...
        android:backgroundTint="#018685"
        android:scaleType="fitCenter"
        android:text="@string/n_modificar"
        app:icon="@drawable/ic_edit_foreground"
        app:iconPadding="0dp"
        app:iconSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/BotonEliminar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LayoutCrear"
        app:layout_constraintTop_toBottomOf="@+id/textViewViento" />

    <Button
        android:id="@+id/BotonEliminar"
...
